2011-10-01  PJ Weisberg <pj@irregularexpressions.net>

	* nethack.el (nh-message-mode): Create new major mode, for an easy
	place to hang hooks to be run in the message window.
	* nethack-api.el (nhapi-create-message-window): Deal with the fact
	that I made nh-message-mode set the buffer read-only
	* nethack-compat.el (nh-message): Likewise

2007-02-20  Shawn Betts  <sabetts@shitbender.gagrod>

	* nethack-compat.el (nh-overwrite-insert): rewrite

	* nethack-api.el (nhapi-doprev-message): call nh-message
	(nhapi-create-message-window): add newline
	(nhapi-display-menu): make sure there's a nh-message-buffer
	(nhapi-select-menu): likewise

2006-08-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack-compat.el (nh-read-key-sequence-vector): return the
	result of read-key-sequence-vector

	* nethack.el (nethack-status-style): new customizable variable
	(nethack-message-style): likewise
	(nethack-prompt-style): likewise
	(nh-filter): add "dummy" as a valid prompt indicator.

	* nethack-compat.el (nh-map-read-mode-map): new global variable
	(nh-map-read-self-insert): new function
	(nh-map-read-submit): likewise
	(nh-map-read-mode): new minor mode
	(nh-read-from-map): new function
	(nh-read-line): likewise
	(nh-last-message): new global variable
	(nh-display-message-in-map): new function
	(nh-message): likewise
	(nh-clear-map-message): likewise
	(nh-clear-message): likewise
	(nh-read-key-sequence-vector): likewise
	(nh-read-char-in-map): likewise
	(nh-read-char): display the prompt in the map buffer when
	nethack-prompt-style is :map
	(nh-pause): new function
	(nh-overwrite-insert): likewise
	(nh-with-point): new macro

	* nethack-api.el (nh-print-status): print status in different
	places depending on nethack-status-style
	(nhapi-message): call nh-message
	(nhapi-yn-function): call nh-read-char
	(nhapi-ask-direction): call nh-read-key-sequence-vector
	(nhapi-getlin): call nh-read-line
	(nhapi-doprev-message): show the last message depending on
	nethack-message-style